annotate g_completion_complete_utf8

acts as a regression test on the recognizing-GLib.List-inside-glib
part of the previous patch.

https://bugzilla.gnome.org/show_bug.cgi?id=602512